python/rregadmin/hive/bin_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -r ^bin_.* -o bin_wrapper.py bin_wrapper.xml'
from ctypes import *

from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.offset_wrapper import offset
from rregadmin.hive.types_wrapper import guint32
from rregadmin.hive.types_wrapper import Bin
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.hive.types_wrapper import Cell
from rregadmin.hive.types_wrapper import used_stats
from rregadmin.util.ustring_list_wrapper import ustring
from rregadmin.util.offset_wrapper import gint32
from rregadmin.hive.types_wrapper import used_stats


# ../../../rregadmin/hive/bin.h 47
bin_init = _libraries['librregadmin.so.1'].bin_init
bin_init.restype = gboolean
# bin_init(hv, data, data_len, previous_bin)
bin_init.argtypes = [POINTER(Hive), offset, guint32, POINTER(Bin)]
bin_init.__doc__ = \
"""gboolean bin_init(Hive * hv, offset data, guint32 data_len, Bin * previous_bin)
../../../rregadmin/hive/bin.h:47"""
# ../../../rregadmin/hive/bin.h 53
bin_get = _libraries['librregadmin.so.1'].bin_get
bin_get.restype = POINTER(Bin)
# bin_get(hdesc, in_prev, p)
bin_get.argtypes = [POINTER(Hive), POINTER(Bin), offset]
bin_get.__doc__ = \
"""Bin * bin_get(Hive * hdesc, Bin * in_prev, offset p)
../../../rregadmin/hive/bin.h:53"""
# ../../../rregadmin/hive/bin.h 62
bin_delete = _libraries['librregadmin.so.1'].bin_delete
bin_delete.restype = None
# bin_delete(p)
bin_delete.argtypes = [POINTER(Bin)]
bin_delete.__doc__ = \
"""void bin_delete(Bin * p)
../../../rregadmin/hive/bin.h:62"""
# ../../../rregadmin/hive/bin.h 68
bin_first_cell = _libraries['librregadmin.so.1'].bin_first_cell
bin_first_cell.restype = POINTER(Cell)
# bin_first_cell(p)
bin_first_cell.argtypes = [POINTER(Bin)]
bin_first_cell.__doc__ = \
"""Cell * bin_first_cell(Bin * p)
../../../rregadmin/hive/bin.h:68"""
# ../../../rregadmin/hive/bin.h 74
bin_get_offset = _libraries['librregadmin.so.1'].bin_get_offset
bin_get_offset.restype = offset
# bin_get_offset(p)
bin_get_offset.argtypes = [POINTER(Bin)]
bin_get_offset.__doc__ = \
"""offset bin_get_offset(Bin * p)
../../../rregadmin/hive/bin.h:74"""
# ../../../rregadmin/hive/bin.h 80
bin_set_dirty = _libraries['librregadmin.so.1'].bin_set_dirty
bin_set_dirty.restype = gboolean
# bin_set_dirty(p)
bin_set_dirty.argtypes = [POINTER(Bin)]
bin_set_dirty.__doc__ = \
"""gboolean bin_set_dirty(Bin * p)
../../../rregadmin/hive/bin.h:80"""
# ../../../rregadmin/hive/bin.h 88
bin_get_next_bin = _libraries['librregadmin.so.1'].bin_get_next_bin
bin_get_next_bin.restype = POINTER(Bin)
# bin_get_next_bin(p)
bin_get_next_bin.argtypes = [POINTER(Bin)]
bin_get_next_bin.__doc__ = \
"""Bin * bin_get_next_bin(Bin * p)
../../../rregadmin/hive/bin.h:88"""
# ../../../rregadmin/hive/bin.h 94
bin_size = _libraries['librregadmin.so.1'].bin_size
bin_size.restype = guint32
# bin_size(p)
bin_size.argtypes = [POINTER(Bin)]
bin_size.__doc__ = \
"""guint32 bin_size(Bin * p)
../../../rregadmin/hive/bin.h:94"""
# ../../../rregadmin/hive/bin.h 102
bin_pages = _libraries['librregadmin.so.1'].bin_pages
bin_pages.restype = guint32
# bin_pages(p)
bin_pages.argtypes = [POINTER(Bin)]
bin_pages.__doc__ = \
"""guint32 bin_pages(Bin * p)
../../../rregadmin/hive/bin.h:102"""
# ../../../rregadmin/hive/bin.h 108
bin_offset_to_begin = _libraries['librregadmin.so.1'].bin_offset_to_begin
bin_offset_to_begin.restype = guint32
# bin_offset_to_begin(p)
bin_offset_to_begin.argtypes = [POINTER(Bin)]
bin_offset_to_begin.__doc__ = \
"""guint32 bin_offset_to_begin(Bin * p)
../../../rregadmin/hive/bin.h:108"""
# ../../../rregadmin/hive/bin.h 114
bin_is_valid = _libraries['librregadmin.so.1'].bin_is_valid
bin_is_valid.restype = gboolean
# bin_is_valid(p)
bin_is_valid.argtypes = [POINTER(Bin)]
bin_is_valid.__doc__ = \
"""gboolean bin_is_valid(Bin * p)
../../../rregadmin/hive/bin.h:114"""
# ../../../rregadmin/hive/bin.h 120
bin_scan = _libraries['librregadmin.so.1'].bin_scan
bin_scan.restype = gboolean
# bin_scan(hbp, stats)
bin_scan.argtypes = [POINTER(Bin), POINTER(used_stats)]
bin_scan.__doc__ = \
"""gboolean bin_scan(Bin * hbp, used_stats * stats)
../../../rregadmin/hive/bin.h:120"""
# ../../../rregadmin/hive/bin.h 128
bin_find_free_cell = _libraries['librregadmin.so.1'].bin_find_free_cell
bin_find_free_cell.restype = POINTER(Cell)
# bin_find_free_cell(p, size)
bin_find_free_cell.argtypes = [POINTER(Bin), guint32]
bin_find_free_cell.__doc__ = \
"""Cell * bin_find_free_cell(Bin * p, guint32 size)
../../../rregadmin/hive/bin.h:128"""
# ../../../rregadmin/hive/bin.h 134
bin_within = _libraries['librregadmin.so.1'].bin_within
bin_within.restype = gboolean
# bin_within(p, check_ptr)
bin_within.argtypes = [POINTER(Bin), offset]
bin_within.__doc__ = \
"""gboolean bin_within(Bin * p, offset check_ptr)
../../../rregadmin/hive/bin.h:134"""
# ../../../rregadmin/hive/bin.h 142
bin_debug_print = _libraries['librregadmin.so.1'].bin_debug_print
bin_debug_print.restype = None
# bin_debug_print(p, in_verbose)
bin_debug_print.argtypes = [POINTER(Bin), gboolean]
bin_debug_print.__doc__ = \
"""void bin_debug_print(Bin * p, gboolean in_verbose)
../../../rregadmin/hive/bin.h:142"""
# ../../../rregadmin/hive/bin.h 151
bin_get_xml_output = _libraries['librregadmin.so.1'].bin_get_xml_output
bin_get_xml_output.restype = gboolean
# bin_get_xml_output(in_bin, in_output, in_verbose)
bin_get_xml_output.argtypes = [POINTER(Bin), POINTER(ustring), gboolean]
bin_get_xml_output.__doc__ = \
"""gboolean bin_get_xml_output(unknown * in_bin, ustring * in_output, gboolean in_verbose)
../../../rregadmin/hive/bin.h:151"""
# ../../../rregadmin/hive/bin.h 159
bin_get_len_page = _libraries['librregadmin.so.1'].bin_get_len_page
bin_get_len_page.restype = gint32
# bin_get_len_page(p)
bin_get_len_page.argtypes = [POINTER(Bin)]
bin_get_len_page.__doc__ = \
"""gint32 bin_get_len_page(Bin * p)
../../../rregadmin/hive/bin.h:159"""
# ../../../rregadmin/hive/bin.h 167
bin_get_ofs_next = _libraries['librregadmin.so.1'].bin_get_ofs_next
bin_get_ofs_next.restype = gint32
# bin_get_ofs_next(p)
bin_get_ofs_next.argtypes = [POINTER(Bin)]
bin_get_ofs_next.__doc__ = \
"""gint32 bin_get_ofs_next(Bin * p)
../../../rregadmin/hive/bin.h:167"""
__all__ = ['bin_offset_to_begin', 'bin_set_dirty', 'bin_get_next_bin',
           'bin_delete', 'bin_is_valid', 'bin_within',
           'bin_get_len_page', 'bin_get', 'bin_get_offset',
           'bin_init', 'bin_size', 'bin_pages', 'bin_get_xml_output',
           'bin_scan', 'bin_find_free_cell', 'bin_first_cell',
           'bin_get_ofs_next', 'bin_debug_print']
